--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+{% load staticfiles %}
   <head>
 
     <meta charset="utf-8">
@@ -11,14 +11,14 @@
     <title>Stylish Portfolio - Start Bootstrap Template</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="static/app/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{% static 'app/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="static/app/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="{% static 'app/vendor/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- Custom CSS -->
-    <link href="static/app/css/stylish-portfolio.css" rel="stylesheet">
+    <link href="{% static 'app/css/stylish-portfolio.css' %}" rel="stylesheet">
 
   </head>
 
@@ -263,14 +263,14 @@
     </footer>
 
     <!-- Bootstrap core JavaScript -->
-    <script src="static/app/vendor/jquery/jquery.min.js"></script>
-    <script src="static/app/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="{% static 'app/vendor/jquery/jquery.min.js' %}"></script>
+    <script src="{% static 'app/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="static/app/vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script src="{% static 'app/vendor/jquery-easing/jquery.easing.min.js' %}"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="static/app/js/stylish-portfolio.js"></script>
+    <script src="{% static 'app/js/stylish-portfolio.js"></script>
 
   </body>
 
